Bug fix and update.